[gd_scene load_steps=17 format=2]

[ext_resource path="res://Texture/Sprite/Elf.png" type="Texture" id=1]
[ext_resource path="res://Shader/flash_shader.gdshader" type="Shader" id=2]
[ext_resource path="res://Script/Elf.gd" type="Script" id=3]
[ext_resource path="res://SFX/laugh.ogg" type="AudioStream" id=4]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 4.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Strafe",
"speed": 4.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 11 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 116, 8 )

[node name="Elf" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
frames = SubResource( 2 )
animation = "Attack"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Hurt = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="WrenchPosition" type="Position2D" parent="."]
position = Vector2( -16, -16 )

[node name="DetectArea" type="Area2D" parent="."]
position = Vector2( 144, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 12 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -2.38419e-07, -2.38419e-07 )
scale = Vector2( 1.6, 1.6 )
physics_process_parent = true

[node name="LaughSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
